[package]
name = "biomass-rs"
version = "0.1.0"
authors = ["Xavier Lambein <xlambein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
# bevy_rng = "0.2"
rand = "0.8"
mouse_tracking = { package = "bevy_mouse_tracking_plugin", version = "0.1.1" }
bevy_egui = "0.2"
